--- a/src/app/usit/components/openreqs/openreqs.component.html
+++ b/src/app/usit/components/openreqs/openreqs.component.html
@@ -67,12 +67,12 @@
                     </ng-container>
     
                     <!-- Visa Column mat-sort-header sortActionDescription="Sort by Visa" -->
-                    <ng-container matColumnDef="category_skill">
+                    <!-- <ng-container matColumnDef="category_skill">
                         <th mat-header-cell *matHeaderCellDef style="width: 13%">
                             Category </th>
                         <td mat-cell *matCellDef="let element"style="width: 13%">
                             {{ element?.category_skill | titlecase }} </td>
-                    </ng-container>
+                    </ng-container> -->
     
                     <!-- Experience Column  sortActionDescription="Sort by Experience"-->
                     <ng-container matColumnDef="employment_type">
