--- a/src/app/usit/components/recruitment/assigned-count/assigned-count.component.html
+++ b/src/app/usit/components/recruitment/assigned-count/assigned-count.component.html
@@ -11,7 +11,7 @@
           
         <div class="header-actions" style="display: flex; align-items: center;">
           <button class="search" mat-raised-button color="primary" style="margin-bottom: 9px;margin: 3px;"  *ngIf="privilegeServ.hasPrivilege('ASSIGNED_REQ_POPUP')" (click)="exportExcel()">
-            Excel Import
+            Excel Export
           </button>
  
         </div>
