--- a/src/app/usit/components/sales/submission-list/add-submission/add-submission.component.scss
+++ b/src/app/usit/components/sales/submission-list/add-submission/add-submission.component.scss
@@ -253,3 +253,12 @@ mat-mdc-menu-content{
 .intl-input{
   opacity: 1;
 }
+.custom-snack-failure {
+  background-color: #f44336 !important; /* Red color */
+  color: white !important;
+}
+.custom-snack-success{
+  background-color: green !important;
+  color: white !important;
+
+}
