--- a/src/app/usit/components/reports/employee-reports/submission-report/submission-report.component.html
+++ b/src/app/usit/components/reports/employee-reports/submission-report/submission-report.component.html
@@ -1,33 +1,19 @@
 <div mat-dialog-content style="padding: 10px;">
-  <div
-    style="display: flex; justify-content: space-between; align-items: center"
-  >
+  <div style="display: flex; justify-content: space-between; align-items: center">
     <h1 mat-dialog-title>'{{ executive }}' {{ vo.vo.status }}'s</h1>
     <div style="display: flex; gap: 8px">
-      <button *ngIf="showReport"
-        mat-raised-button
-        style="background-color: #4caf50; color: white"
-        (click)="popUpImport()"
-      >
+      <button *ngIf="showReport" mat-raised-button style="background-color: #4caf50; color: white"
+        (click)="popUpImport()">
         Excel
       </button>
-      <button
-        mat-raised-button
-        style="background-color: #774caf; color: white"
-        (click)="closeDialog()"
-      >
+      <button mat-raised-button style="background-color: #774caf; color: white" (click)="closeDialog()">
         Close
       </button>
     </div>
   </div>
 
-  <div
-    class="row"
-    oncopy="return false"
-    onpaste="return false"
-    oncut="return false"
-    style="height: 700px; overflow: auto"
-  >
+  <div class="row" oncopy="return false" onpaste="return false" oncut="return false"
+    style="height: 700px; overflow: auto">
     <table class="table table-light table-bordered">
       <thead class="thead-light sticky">
         <tr>
@@ -35,8 +21,9 @@
           <th>DOS</th>
           <th>Consultant</th>
           <th>Requirement</th>
-          <th>Impl Partner</th>
           <th>End Client</th>
+
+          <th>Impl Partner</th>
           <th>Vendor</th>
           <th>Submission Rate</th>
           <th>Project Location</th>
@@ -50,8 +37,9 @@
           <td>{{ s.createddate }}</td>
           <td>{{ s.consultantname }}</td>
           <td>{{ s.position }}</td>
-          <td>{{ s.implpartner }}</td>
           <td>{{ s.endclient }}</td>
+
+          <td>{{ s.implpartner }}</td>
           <td>{{ s.vendor }}</td>
           <td class="narvee">{{ s.submissionrate }}</td>
           <td>{{ s.projectlocation }}</td>
