--- a/src/app/usit/components/recruitment/assigned-requirements/assigned-requirements.component.html
+++ b/src/app/usit/components/recruitment/assigned-requirements/assigned-requirements.component.html
@@ -64,6 +64,12 @@
             {{ element?.requirementsCount }}
           </td>
         </ng-container>
+        <ng-container matColumnDef="ServedCount">
+          <th mat-header-cell *matHeaderCellDef> Served Count </th>
+          <td mat-cell *matCellDef="let element" >
+            {{ element?.served_count }}
+          </td>
+        </ng-container>
 
 
         <tr mat-header-row *matHeaderRowDef="dataTableColumns; sticky: true"></tr>
