--- a/src/app/usit/components/recruitment/assigned-requirements/assigned-requirements.component.html
+++ b/src/app/usit/components/recruitment/assigned-requirements/assigned-requirements.component.html
@@ -60,13 +60,13 @@
         </ng-container>
         <ng-container matColumnDef="RequirementCount">
           <th mat-header-cell *matHeaderCellDef> Requirement Count </th>
-          <td mat-cell *matCellDef="let element" (click)="requirementreportdata(element)" class="requirementcount">
+          <td mat-cell *matCellDef="let element" (click)="requirementreportdata(element)" class="requirementcount" style="text-align: center;">
             {{ element?.requirementsCount }}
           </td>
         </ng-container>
         <ng-container matColumnDef="ServedCount">
           <th mat-header-cell *matHeaderCellDef> Served Count </th>
-          <td mat-cell *matCellDef="let element" >
+          <td mat-cell *matCellDef="let element"   style="text-align: center;">
             {{ element?.served_count }}
           </td>
         </ng-container>
