--- a/src/app/usit/components/role-list/add-role/add-role.component.html
+++ b/src/app/usit/components/role-list/add-role/add-role.component.html
@@ -23,6 +23,34 @@
       <!-- <div class="error-message"  *ngIf="isFormSubmitted && roleForm.rolename.errors">
         <mat-error class="error-message" *ngIf="isFormSubmitted && roleForm.rolename.errors">Please enter remarks</mat-error>
       </div> -->
+
+            <!-- Multi-select dropdown -->
+             
+<!-- <mat-form-field class="multiselect-field" *ngIf="isCompanyToDisplay">
+  <mat-label>Select Companies</mat-label>
+  <mat-select formControlName="selectedOptions" multiple>
+    <mat-option *ngFor="let option of options" [value]="option.companyid">
+      {{ option.companyname }}
+    </mat-option>
+  </mat-select>
+   
+   <mat-error *ngIf="roleForm.selectedOptions.errors?.required && isFormSubmitted">
+    Select at least one ompany
+  </mat-error>
+</mat-form-field> -->
+
+<!-- <div class="select-role-field" *ngIf="isCompanyToDisplay"> -->
+  <!-- <mat-form-field appearance="fill" class="multiselect-field">
+      <mat-label>Select Company</mat-label>
+      <mat-select name="company" formControlName="selectedOptions">
+          <mat-option *ngFor="let option of companyOptions" [value]="option.companyid">
+              {{ option.companyname }}
+          </mat-option>
+      </mat-select>
+      <mat-error *ngIf="isCompanyToDisplay && employeeForm.get('companyid').hasError('required')">Company is required</mat-error>
+  </mat-form-field> -->
+<!-- </div> -->
+
       <mat-form-field class="description-field">
         <mat-label>Description</mat-label>
         <textarea title="" maxlength="250" matInput placeholder="Please enter the remarks" formControlName="description"></textarea>
